--- a/OwnershipV3.cfg
+++ b/OwnershipV3.cfg
@@ -1,5 +1,6 @@
 CONSTANT MAX_CHILDREN = 2
          MAX_CALL_DEPTH = 2
+         MAX_WORKERS = 5
 SPECIFICATION Spec
 INVARIANT SafetyInvariant
 PROPERTIES LivenessProperty
